# allreduce

./: .gitmodules  CMakeLists.txt  Makefile  README.md  binary_tree  binary_tree.cpp  binomial_broadcast.cpp  io.cpp  io.hpp
benchmarks/: CMakeLists.txt  benchmark.py  compare_scaling.ipynb  microbenchmarks.py  mpi_send_bench.cpp  profile-rank-0.sh  results.db  scaling.py  treebenchmark.cpp  visualize.ipynb  visualize_scaling.ipynb
contrib/: benchmark.py  gdb_script
data/: 354.binpsllh  NagyA1.psllh  XiD4.psllh  aa_rokasA8.binpsllh  dna_rokasD4.binpsllh  fusob.psllh  multi100.binpsllh  multi199.psllh  prim.psllh
dependencies/: md5sums.txt  urls.txt
jupyter/: balancing_variance.ipynb  critical_path.ipynb  distribution_experiments.ipynb  message_bundling.ipynb  message_count.ipynb  message_count_correctness.ipynb  optimal_tree.ipynb  variances.csv
jupyter/.ipynb_checkpoints/: optimal_tree-checkpoint.ipynb
jupyter/cpp/: setup.py  tree.cpp
misc/: benchscore.py  benchscore.sh  compileandrun.sh  compiler.sh  distribution_bench.sh  foreach_dataset.sh  generate_reference_data.sh  load_modules.sh  ompi_job.sh  optimize_variances.sh  quickbench.sh  reference_tree_sum.csv  reproducibility-test-2022-03-24-c526fe67b540667115f040f67fe973f506c1acd5-i10pc138.txt
src/: CMakeLists.txt  binary_tree.cpp  binary_tree.hpp  critical_path.cpp  critical_path.hpp  io.cpp  main.cpp  tree_simulations.cpp  util.cpp  util.hpp
src/strategies/: BaselineSummation.cpp  allreduce_summation.cpp  allreduce_summation.h  baseline_summation.cpp  baseline_summation.hpp  binary_tree.cpp  binary_tree.hpp  summation_strategy.cpp  summation_strategy.hpp
src/summation/: CMakeLists.txt  data_distribution.hpp  distribution.cpp  distribution.hpp  io.cpp  io.hpp  tree_sum.cpp  tree_sum.h  util.cpp  util.hpp
src/summation/strategies/: allreduce_summation.cpp  baseline_summation.cpp  binary_tree.cpp  binary_tree.hpp  kahan_summation.cpp  kahan_summation.hpp  reproblas_summation.cpp  reproblas_summation.hpp  summation_strategy.cpp  summation_strategy.hpp  tags
test/: CMakeLists.txt  binary_tree_tests.cpp  check_correctness.py  distribution_tests.cpp  hello_testing.cpp  io_tests.cpp  reproducibility_test.py  util_tests.cpp
test/data/: example.psllh  fusob.binpsllh  prim.binpsllh
